--- a/daml.yaml
+++ b/daml.yaml
@@ -4,7 +4,7 @@
 sdk-version: 2.5.0
 name: gold-trade
 source: daml
-init-script: Main:setup
+init-script: Setup:setup
 version: 0.0.1
 dependencies:
   - daml-prim
